# ai-trading-platform

./: .env.example  .gitignore  AGENT_README.md  README.md  capture_screenshots.py  docker-compose.yml  pipeline_output.txt  prefect.yaml  pyproject.toml  run_agent.py  run_enhanced_pipeline.py  run_macro_ingestion.py  run_pipeline.py  test_telegram.py  test_telegram_signal.py
.github/agents/: trading-strategy.agent.md
infra/db/: init.sql
orchestrator/: __init__.py
orchestrator/flows/: __init__.py  daily_e2e_pipeline.py
src/ai_trading/: __init__.py
src/ai_trading/agent/: __init__.py  commands.py  trader_agent.py
src/ai_trading/alerts/: __init__.py  notifier.py
src/ai_trading/backtest/: __init__.py  ema_crossover.py
src/ai_trading/broker/: __init__.py  alpaca_broker.py
src/ai_trading/data_ingestion/: __init__.py  fred_client.py  main.py
src/ai_trading/execution/: __init__.py  paper_execution.py
src/ai_trading/feature_store/: __init__.py  build_features.py
src/ai_trading/ml/: __init__.py  features.py  models.py  optimizer.py
src/ai_trading/monitoring/: __init__.py  dashboard.py  dashboard_en.py
src/ai_trading/risk_engine/: __init__.py  apply_risk.py  policy.py
src/ai_trading/shared/: __init__.py  config.py
src/ai_trading/signals/: __init__.py  generate_signals.py  momentum_breakout.py  multi_strategy.py  rsi_mean_reversion.py
tests/: __init__.py  test_paper_execution.py  test_risk_policy.py
